<resources>
    <string name="app_name">App Lanchonete</string>
    <string name="textViewCardapio">Cardápio</string>
    <string name="textViewCafe">Café</string>
    <string name="textViewBolo">Bolo</string>
    <string name="textViewHamburguer">Hambúrguer</string>
    <string name="textViewPizza">Pizza</string>
    <string name="BtnFinalizar">Finalizar</string>
    <string name="textViewValorCafe">Valor da Unidade: R$ 4,00</string>
    <string name="EditTextDigiteQuantidade">Digite a Quantidade</string>
    <string name="btnCalcular">Calcular</string>
    <string name="textViewValorPizza">Valor da Unidade: R$ 20,00</string>
    <string name="textViewValorBolo">Valor do Pedaço: R$ 8,00</string>
    <string name="textViewValorHumbuguer">Valor da Unidade: R$ 18,00</string>
</resources>