<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:background="@color/purple_200"
        android:text="@string/textViewCardapio"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/cafe"
                android:onClick="clicar"
                android:id="@+id/imgCafe"/>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/bolo"
                android:onClick="clicar"
                android:id="@+id/imgBolo"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewCafe"
                android:gravity="center"
                android:background="@color/purple_200"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewBolo"
                android:gravity="center"
                android:background="@color/purple_200"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </TableRow>
        <TableRow>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/hamburguer"
                android:onClick="clicar"
                android:id="@+id/imgHamburguer"/>
            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/pizza"
                android:onClick="clicar"
                android:id="@+id/imgPizza"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewHamburguer"
                android:gravity="center"
                android:background="@color/purple_200"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textViewPizza"
                android:gravity="center"
                android:background="@color/purple_200"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clicar"
            android:text="@string/BtnFinalizar"
            android:id="@+id/btnFinalizar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResultado"/>
    </LinearLayout>
</LinearLayout>